# needrestart

./: .gitignore  AUTHORS  ChangeLog  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.in  NEWS  README.Cont.md  README.Interp  README.Interp.md  README.Kernel  README.batch.md  README.md  README.nagios.md  README.raspberry.md  README.uCode.md  configure  configure.in  debconf.templates  needrestart  needrestart.1  needrestart.conf
.github/: no-response.yml
ex/: 99needrestart  iucode.sh  needrestart.conf  notify.conf
ex/apt/: apt-pinvoke  dpkg-status  needrestart-apt_d  needrestart-dpkg_d
ex/conf.d/: README.needrestart
ex/debconf/: needrestart.templates
ex/debconf/po/: POTFILES.in  cs.po  de.po  ru.po  ru.pot  templates.pot  zh_TW.po
ex/icinga2/: command.conf  needrestart-sudoers
ex/nagios/: check_needrestart  needrestart-nagios  plugin.conf
ex/notify.d/: 100-write  110-notify-send  200-mail.ex  200-write  400-notify-send  600-mail  README.needrestart
ex/polkit/: net.fiasko-nw.needrestart.policy
ex/restart.d/: README.needrestart  dbus-broker.service  dbus.service  systemd-manager  systemd-user  sysv-init
hooks/: 10-dpkg  20-rpm  30-pacman  90-none  dpkg  none
lib/: iucode-scan-versions  notify.d.sh  vmlinuz-get-version
man/: Makefile.am  Makefile.in  needrestart.1
perl/: Makefile.PL
perl/lib/: NeedRestart.pm  NeedRestart.pm.in
perl/lib/NeedRestart/: CONT.pm  Interp.pm  (+7 more)
po/: debconf
po/needrestart/: Makefile  cs.po  de.po  messages.pot  ru.po  zh_TW.po
po/needrestart-notify/: Makefile  cs.po  de.po  messages.pot  ru.po  zh_TW.po
(+18 files in other folders)
