#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_REVISION($Revision$)

AC_PREREQ(2.61)
AC_INIT(needrestart, 0.3, thomas@fiasko-nw.net)
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([
Makefile
man/Makefile
perl/lib/NeedRestart.pm
])

AC_OUTPUT
